<resources>
    <string name="action_share">Share this xkcd</string>
    <string name="action_left">Previous</string>
    <string name="action_right">Next</string>
    <string name="action_search">Search</string>
    <string name="action_xkcd_list">Browse xkcds</string>
    <string name="action_specific">Specific xkcd</string>
    <string name="action_xkcd">Go to xkcd.com</string>
    <string name="action_xk3d">Go to xk3d</string>
    <string name="action_explain">Go to explainxkcd</string>
    <string name="search_hint_xkcd">Search xkcd</string>

    <string name="dialog_got_it">Got it</string>
    <string name="dialog_more_details">More details</string>

    <string name="dialog_pick_content">Select the id of xkcd</string>
    <string name="dialog_pick_content_what_if">Select the id of what if</string>
    <string name="dialog_select">Select</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="share_to">Share this xkcd to</string>
    <string name="share_to_what_if">Share this what if to</string>

    <string name="btn_reload">reload</string>
    <string name="go_to_explainxkcd">GO TO EXPLAINXKCD</string>
    <string name="more_on_explainxkcd">MORE ON EXPLAINXKCD</string>
    <string name="xkcd_pic">xkcd comics</string>
    <string name="pref_arrow">Quick switch</string>
    <plurals name="pref_arrow_summary">
        <item quantity="one">Switch %s page when action bar arrow clicked</item>
        <item quantity="other">Switch %s pages when action bar arrow clicked</item>
    </plurals>
    <string name="pref_what_if_zoom">Text scale in what if</string>
    <string name="pref_what_if_search">what if search preference</string>
    <string name="pref_what_if_search_ignore_content">Only search article title</string>
    <string name="pref_what_if_search_include_read">Also include article contents that liked or thumb-up-ed</string>
    <string name="pref_what_if_search_search_all">Search both title and content of all articles</string>

    <string name="pref_font">Increase legibility</string>
    <string name="pref_arrow_content">Set the number of comics to skip when arrow clicked</string>
    <string name="pref_random_title">Shake for random</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_dark_mode">Dark theme</string>
    <string name="pref_dark_mode_on">ON</string>
    <string name="pref_dark_mode_off">OFF</string>
    <string name="pref_dark_mode_system">System default</string>
    <string name="pref_font_xkcd">Using xkcd font</string>
    <string name="pref_font_normal">Using normal font</string>
    <string name="pref_control">Control</string>
    <string name="pref_xkcd_gif_eco_mode_title">Gif comics eco-mode</string>
    <string name="pref_xkcd_gif_eco_mode_on">Better performance, 10 frames per second</string>
    <string name="pref_xkcd_gif_eco_mode_off">Better details, higher fps when playing</string>
    <string name="pref_xkcd_interactive_title">Interactive comics</string>
    <string name="pref_xkcd_interactive_on">Comics 1525, 1663, 2198, etc. are alive</string>
    <string name="pref_xkcd_interactive_off">Comics stay static</string>
    <string name="pref_xkcd_translation_title">Translation</string>
    <string name="pref_xkcd_translation_on">A switch will be shown when translation exists</string>
    <string name="pref_xkcd_translation_off">Ignore translations</string>
    <string name="pref_xkcd_preload_title">Preload xkcd</string>
    <string name="pref_xkcd_preload_summary">Download all comics for fast rendering or offline</string>
    <string name="pref_xkcd_storage_title">Comic cache location</string>
    <string name="pref_xkcd_storage_title_dialog">Select comic cache location.</string>
    <string name="pref_xkcd_storage_toast">Restart the app to apply the change.\nAlso clear cache to reclaim the disk space if desired</string>
    <string name="pref_xkcd_storage_internal">Internal storage</string>
    <string name="pref_xkcd_storage_external">External storage</string>
    <string name="pref_xkcd_alt_on_main_title">Title text</string>
    <string name="pref_xkcd_alt_on_main_long_press">Long press on comic to show in dialog</string>
    <string name="pref_xkcd_alt_on_main_in_page">Show title text under comics</string>

    <string name="settings">Settings</string>
    <string name="see_translation">SEE TRANSLATION</string>
    <string name="see_original">SEE ORIGINAL</string>

    <string name="random_disabled">Disabled</string>
    <string name="random_fav_like">Exclude favorites or thumbed</string>
    <string name="random_all">All the contents</string>
    <string name="share_text">Come and check this funny image I got from xkcd. %s</string>
    <string name="toast_more_explain_failed">Failed to get more details</string>
    <string name="title_xkcd_list">xkcd list</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_calendar_ascending">Oldest First</string>
    <string name="menu_calendar_descending">Newest First</string>

    <string name="thumbs_up">Thumbs-up</string>
    <string name="add_to_fav">Add to favorite</string>

    <string name="filter_all_comics">All comics</string>
    <string name="filter_all_articles">All articles</string>
    <string name="filter_my_fav">My favorite</string>
    <string name="filter_people_choice">People\'s choice</string>

    <string name="uri_hint_explain_edit">This explain is to be updated, help if you can.</string>

    <string-array name="notification_titles">
        <item>new %s is coming</item>
        <item>new %s on the way</item>
    </string-array>

    <string name="action_what_if_list">Browse what if</string>
    <string name="action_specific_what_if">Specific what if</string>
    <string name="search_hint_what_if">Search what if</string>
    <string name="title_what_if_list">what if list</string>
    <string name="share_text_what_if">Come and check this article I got from what if. %s</string>
    <string name="share_text_article_extra">Come and check this article I got. %s</string>
    <string name="check_solution">Check solution</string>
    <string name="check_puzzle">Go back to puzzle</string>
    <string name="bookmark_saved">Bookmark saved</string>

    <string name="xkcd_download_notification_channel_name">Download xkcd</string>
    <string name="xkcd_download_notification_content_text">Remain: %d</string>

    <string name="activity_title_manage_space">Storage Management</string>
    <string name="pref_system">System</string>
    <string name="pref_system_space_summary">Manage space taken by comics and articles</string>

    <string name="pref_storage_xkcd_comics_summary">total comics: %d\ninfo ready: %d</string>
    <string name="pref_storage_what_if_article_summary">total articles: %d\ninfo ready: %d</string>
    <string name="pref_storage_what_if_cache_summary">cache size: %s\nIncluding interactive xkcd webpage data</string>
    <string name="pref_storage_xkcd_images_summary">comics downloaded: %d\ncache size: %s</string>
    <string name="pref_storage_xkcd_images_title">xkcd images (approx.)</string>
    <string name="pref_storage_what_if_cache_title">what if cache (approx.)</string>
    <string name="delete">Delete</string>
    <string name="delete_info">Delete Info</string>
    <string name="delete_cache">Delete Cache</string>
    <string name="clear_data">Clear Data</string>
    <string name="pref_storage_clear_data_summary">Be careful! All the data will be deleted</string>
    <string name="pref_storage_xkcd_extra_summary">info ready: %d</string>
    <string name="pref_storage_xkcd_extra">xkcd extra</string>
    <string name="pref_storage_what_if_article">what if articles</string>

    <string name="pref_fav_and_archive_title">Love &amp; Archive</string>
    <string name="pref_fav_and_archive_summery">Archive comics and articles when added to favorites</string>
    <string name="archive">Archive</string>

    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_summary_enable_from_settings">Enable notification from system settings</string>
    <string name="pref_notification_summary_enabled">Receive notifications on Monday, Wednesday, Friday, April 1, and every 4 years.</string>
    <string name="pref_notification_summary_disabled">Turn ON to get notified of latest xkcd and what if</string>
</resources>
