<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="pref_key_xkcd"
        app:title="@string/pref_xkcd">

        <xyz.jienan.xkcd.settings.ButtonPreference
            app:iconSpaceReserved="false"
            app:key="pref_xkcd_comics"
            app:summary="@string/pref_storage_xkcd_comics_summary"
            app:title="@string/xkcd_pic"
            app:widgetLayout="@layout/pref_widget_delete" />

        <xyz.jienan.xkcd.settings.ButtonPreference
            app:iconSpaceReserved="false"
            app:key="pref_xkcd_images"
            app:summary="@string/pref_storage_xkcd_images_summary"
            app:title="@string/pref_storage_xkcd_images_title"
            app:widgetLayout="@layout/pref_widget_delete" />

        <xyz.jienan.xkcd.settings.ButtonPreference
            app:iconSpaceReserved="false"
            app:key="pref_xkcd_extra"
            app:summary="@string/pref_storage_xkcd_extra_summary"
            app:title="@string/pref_storage_xkcd_extra"
            app:widgetLayout="@layout/pref_widget_delete" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="pref_key_what_if"
        app:title="@string/pref_what_if">

        <xyz.jienan.xkcd.settings.ButtonPreference
            app:iconSpaceReserved="false"
            app:key="pref_what_if_articles"
            app:summary="@string/pref_storage_what_if_article_summary"
            app:title="@string/pref_storage_what_if_article"
            app:widgetLayout="@layout/pref_widget_delete" />

        <xyz.jienan.xkcd.settings.ButtonPreference
            app:iconSpaceReserved="false"
            app:key="pref_what_if_cache"
            app:summary="@string/pref_storage_what_if_cache_summary"
            app:title="@string/pref_storage_what_if_cache_title"
            app:widgetLayout="@layout/pref_widget_delete" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="pref_key_system"
        app:title="@string/pref_system">

        <xyz.jienan.xkcd.settings.ButtonPreference
            app:iconSpaceReserved="false"
            app:isPreferenceVisible="false"
            app:key="pref_system_clear_cache"
            app:title="@string/delete_cache"
            app:widgetLayout="@layout/pref_widget_delete" />

        <xyz.jienan.xkcd.settings.ButtonPreference
            app:iconSpaceReserved="false"
            app:key="pref_system_clear_data"
            app:summary="@string/pref_storage_clear_data_summary"
            app:title="@string/clear_data"
            app:widgetLayout="@layout/pref_widget_delete" />

    </PreferenceCategory>

</PreferenceScreen>