<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_xkcd_list"
        android:orderInCategory="1"
        android:title="@string/action_xkcd_list"
        android:icon="@drawable/ic_xkcd_list"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_specific"
        android:orderInCategory="2"
        android:title="@string/action_specific"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_go_xk3d"
        android:orderInCategory="11"
        android:title="@string/action_xk3d"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_go_explain"
        android:orderInCategory="12"
        android:title="@string/action_explain"
        app:showAsAction="never" />
</menu>