<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.jienan.xkcd.home.MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/xkcd"
        android:gravity="center"
        android:saveEnabled="false"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0. Default Image" />

    <ImageView
        android:id="@+id/ivXkcdPic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/xkcd_pic"
        android:saveEnabled="false"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:src="@drawable/ic_heart_on" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:saveEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/tvCreateDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="200dp"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:saveEnabled="false"
            android:textSize="16sp" />

    </ScrollView>

    <TextView
        android:id="@+id/tvCreateDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/xkcd"
        android:gravity="start"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:saveEnabled="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSeeTranslation"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="2017.7.2" />

    <TextView
        android:id="@+id/btnSeeTranslation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/xkcd"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:saveEnabled="false"
        android:text="@string/see_translation"
        android:textColor="@color/colorAccent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/tvCreateDate"
        app:layout_constraintStart_toEndOf="@id/tvCreateDate"
        tools:visibility="visible" />

    <xyz.jienan.xkcd.ui.CircleProgressBar
        android:id="@+id/pbLoading"
        style="@style/image_progress_bar"
        android:saveEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnReload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:saveEnabled="false"
        android:text="@string/btn_reload"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
